US712 made calendar min width 714 and added scrollbar at the bottom if it get narrower than that. also made the summary a fixed width

--- a/app/scss/calendar/_calendar.scss
+++ b/app/scss/calendar/_calendar.scss
@@ -147,12 +147,14 @@
 {
 
     @include grid-column(15);
+    @include nice-scrollbar;
     user-select: none;
     -moz-user-select: none;
     -webkit-user-select: none;
     //margin-left: 45px;
 	padding: 0 2px;
 	background-color: white;
+    overflow-x: auto;
 
     @include calc(width, "100% - 45px"); 
 
@@ -165,6 +167,11 @@
         border-left-color: $TPGrey2;
     }
 
+    #weeksContainer
+    {
+        min-width: 1007px;
+    }
+
     .week
     {
         @include grid-row();
@@ -175,13 +182,13 @@
 
     .day
     {
-        @include grid-column(2);
         min-height:150px;
 		background-color: $TPGrey1;
         padding: 0px 0px 5px;
-
+        @include calc(width, "(100% - 288px) /7");
         overflow-x: hidden;
         overflow-y: visible;
+        float: left;
 
         &.selected
         {
@@ -316,10 +323,12 @@
 		z-index: 1;
         cursor: default;
         max-width: none;
+        min-width: 1007px;
 
         div
         {
-                @include grid-column(2);
+                @include calc(width, "(100% - 288px) /7");
+                float: left;
                 padding-bottom: 0px;
                 padding-left: 5px;
                 padding-right: 0px;
