--- a/app/scss/calendar/_weekSummary.scss
+++ b/app/scss/calendar/_weekSummary.scss
@@ -8,6 +8,8 @@
     background-color: $TPGrey1;
     overflow: hidden;
     margin-bottom: 10px;
+    width: 288px;
+    min-width: 288px;
 
     div
     {
